Fixed overflow

--- a/src/pages/Dashboard.module.css
+++ b/src/pages/Dashboard.module.css
@@ -85,6 +85,6 @@
         'languages'
         'repos'
         ;
-       
+       overflow: hidden;
     }
 }
